# turicreate

./: .gitignore  CMakeLists.txt  README.md  configure
cmake/: UseCython.cmake
scenario-tests/tests/: .gitignore
scripts/: install_python_toolchain.sh  make_wheel.sh  requirements-minimal.txt  requirements.txt  run_cpp_tests.py
src/: CMakeLists.txt
src/capi/: CMakeLists.txt  TuriCreate.h
src/flexible_type/: flexible_type.cpp  flexible_type.hpp  flexible_type_base_types.hpp  flexible_type_detail.hpp  ndarray.hpp
src/ml/: CMakeLists.txt
src/model_server/: CMakeLists.txt  unity.dox
src/python/: setup.py
src/sframe/: sarray.hpp  sarray_file_format_v2.hpp  sarray_v2_encoded_block.cpp  sarray_v2_encoded_block.hpp  sarray_v2_type_encoding.cpp  sarray_v2_type_encoding.hpp  sframe.cpp  sframe_rows.hpp
src/toolkits/: CMakeLists.txt
src/util/: coro.hpp
src/visualization/: CMakeLists.txt
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  sframe_bench.cpp  sframe_bench_aggregate.cpp
test/fileio/: s3_filesys_test.cpp
test/flexible_type/: flexible_datatype.cxx  ndarray_test.cxx
test/random/: test_alias.cpp
test/sframe/: CMakeLists.txt  integer_pack_test.cxx  parallel_sframe_iterator.cxx  sarray_file_format_v2_test.cxx  sarray_test.cxx  sframe_csv_test.cxx  sframe_test.cxx  shuffle_test.cxx  test_sarray_iterators.cxx
test/sframe_query_engine/: basic_end_to_end.cxx  optimizations.cxx
test/table_printer/: table_printing.cxx
test/unity/: CMakeLists.txt  (+10 more)
test/unity/toolkits/: CMakeLists.txt
userguide/: README.md  SUMMARY.md  cpp.md
(+615 files in other folders)
